--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<htmllang="pt-br">
 <head>
 	<title>TCC</title>
 	<meta charset="UTF-8">
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" />
+	
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&amp;key=AIzaSyCtENpPtnXuhyibuN18N_BFwCvMMq1nVYg&amp;libraries=visualization"></script>
 	<script src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/heatmap.js"></script>
