Criação do README

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <htmllang="pt-br">
 <head>
-	<title>TCC</title>
+	<title>Decision Helper</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
 </head>
 <body>
 <section id="main">
-	<h1>Mapa</h1>
+	<h1>Decision Helper</h1>
 	<div id="heatmapArea">
 
 	</div>
